--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,13 @@ environment:
 
 dependencies:
   dio: ">=4.0.0 <6.0.0"
+  equatable: ^2.0.5
+  clipboard: ^0.1.3
+  fluttertoast: ^8.2.8
+  google_fonts: ^6.2.1
   flutter:
     sdk: flutter
+  flutter_styled_toast: ^2.2.1
 
 dev_dependencies:
   flutter_test:
