--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter 
+  shared_preferences: ^2.2.2
   floating_logger:
     path: ..
   cupertino_icons: ^1.0.8
