--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,14 @@ name: floating_logger
 description: floating_logger is a Flutter library that provides a floating widget for real-time API request logs. It allows developers to monitor API fetch responses and easily copy the corresponding curl request for testing or debugging, making it an essential tool for efficient development and debugging
 
 version: 0.0.1
-homepage: https://github.com/dzikrul1616
-repository: https://github.com/dzikrul1616/flutter_floating_logger
+homepage: https://github.com/dzikrul1616/flutter_floating_logger
+repository: https://github.com/dzikrul1616/flutter_floating_logger/tree/main/dio_floating_logger
+issue_tracker: https://github.com/dzikrul1616/flutter_floating_logger/issues
+
+topics:
+  - dio
+  - logger 
+  - floating
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -14,7 +20,7 @@ dependencies:
   equatable: ^2.0.5
   clipboard: ^0.1.3
   fluttertoast: ^8.2.8
-  google_fonts: ^6.2.1
+  google_fonts: ^6.2.1 
   flutter:
     sdk: flutter
   flutter_styled_toast: ^2.2.1
@@ -23,5 +29,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.6
+  mockito: ^5.4.4
   
  
