--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   floating_logger:
     path: ..
   cupertino_icons: ^1.0.8
+  custom_refresh_indicator: ^4.0.1
 
 dev_dependencies:
   flutter_test:
