--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -11,13 +11,17 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Dart
+        uses: dart-lang/setup-dart@v1
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.2'  
+          flutter-version: '3.24.2'
+          
       - name: Install dependencies
         run: dart pub get
         
