--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,42 +11,45 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Dart
+        uses: dart-lang/setup-dart@v1
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.2'  
+          flutter-version: '3.24.2'
 
       - name: Install dependencies
         run: dart pub get
-        
+
       - name: Analyze project source
         run: dart analyze
-      
+
       - name: Run Flutter tests with coverage
         run: flutter test --coverage
-      
+
       - name: Generate LCOV info
         run: |
           dart pub global activate coverage
           dart pub global run coverage:format_coverage --lcov -i coverage/ --report-on lib/ > coverage/lcov.info
           cat coverage/lcov.info
-      
+
       - name: Show Coverage Percentage
+        shell: bash
         run: |
           if [ -s coverage/lcov.info ]; then
-            dart pub global run coverage:format_coverage --lcov -i coverage/ --report-on lib/ > coverage/lcov.info
             echo "Coverage report successfully generated."
             cat coverage/lcov.info | grep "DA:" | wc -l
           else
             echo "No coverage data found!"
             exit 1
           fi
-      
+
       - name: Upload coverage artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: coverage/lcov.info
