--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,6 +34,17 @@ jobs:
       - name: Run Flutter tests with coverage
         run: flutter test --coverage
 
+      - name: Check Score Coverage
+        uses: VeryGoodOpenSource/very_good_coverage@v3.0.0
+        with:
+          path: coverage/lcov.info
+          min_coverage: 93
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+           token: ${{ secrets.CODECOV_TOKEN }}
+
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
