[UPDATE] fix interceptor add onerror & fix network simulation dio error

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     path: ..
   cupertino_icons: ^1.0.8
   custom_refresh_indicator: ^4.0.1
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
