--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   build_runner: ^2.4.13
   mockito: ^5.4.4 
+  fake_async: ^1.1.1
   
 screenshots:
   - description: Floating logger package logo.
