--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   custom_refresh_indicator: ^4.0.1
   dio: ^5.8.0+1
+  flutter_bloc: ^9.1.1
+  google_fonts: ^6.3.3
+  equatable: ^2.0.8
 
 dev_dependencies:
   flutter_test:
