--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ environment:
 dependencies:
   dio: ^5.8.0+1
   equatable: ^2.0.7
-  google_fonts: 6.2.1 
+  google_fonts: ^6.2.1 
   flutter:
     sdk: flutter 
 
